--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+
+  <!-- FONT_FAMILY -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+    rel="stylesheet">
+  <!-- FONT_FAMILY -->
+
+
 </head>
 
 <body>
