--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     rel="stylesheet">
   <!-- FONT_FAMILY -->
 
-
+<!-- Global site tag (gtag.js) - Google Ads: 408260553 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-408260553"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-408260553'); </script>
 </head>
 
 <body>
