--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Chex</title>
-
+  <link rel="icon" type="image/png" href="icon.png">
   <!-- FONT_FAMILY -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
     rel="stylesheet">
   <!-- FONT_FAMILY -->
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/>
 
 <!-- Global site tag (gtag.js) - Google Ads: 408260553 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-408260553"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-408260553'); </script>
 </head>
