make changes after deployment]

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Chex</title>
+  <title>Chex.AI</title>
   <link rel="icon" type="image/png" href="icon.png">
   <!-- FONT_FAMILY -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
