adds google ads

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,29 @@
     (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/u0e3gfow';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
     </script>  
 
+<script>
+  if(window.location.pathname == "/thankyouScreen"){
+    window.addEventListener('load',function(){
+      gtag('event', 'conversion', {'send_to': 'AW-405262674/DrBfCNKpv_4BENKin8EB'});
+    })
+  }
+</script>
+
+<script>
+  var x = 0;
+  var myVar = setInterval(function(){
+    if(x == 0){
+      if(document.querySelector('.react-toast-notifications__toast--success').innerText.indexOf("User created successfully")!=-1)
+      {
+        gtag('event', 'conversion', {'send_to': 'AW-405262674/oplmCOzf24ACENKin8EB'});
+        clearInterval(myVar);
+        x = 1;
+      }
+    }
+  }, 1000);
+</script>
+
+
 </body>
 
 </html>
