--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
 <!-- Global site tag (gtag.js) - Google Ads: 408260553 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-408260553"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-408260553'); </script>
 
-<!-- <script>
+<script>
   window['_fs_debug'] = false;
   window['_fs_host'] = 'fullstory.com';
   window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
@@ -63,16 +63,16 @@
       if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
       g._v="1.3.0";
   })(window,document,window['_fs_namespace'],'script','user');
-  </script> -->
+  </script>
 
-  <script type='text/javascript'>
+  <!-- <script type='text/javascript'>
     window.smartlook||(function(d) {
       var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
       var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
       c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
       })(document);
       smartlook('init', 'd06e608c80d9bbdcb4a09a14326326a1b9234c3c');
-  </script>
+  </script> -->
 </head>
 
 <body>
