--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
 <!-- Global site tag (gtag.js) - Google Ads: 408260553 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-408260553"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-408260553'); </script>
 
-<script>
+<!-- <script>
   window['_fs_debug'] = false;
   window['_fs_host'] = 'fullstory.com';
   window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
@@ -63,7 +63,7 @@
       if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
       g._v="1.3.0";
   })(window,document,window['_fs_namespace'],'script','user');
-  </script>
+  </script> -->
 </head>
 
 <body>
